# thesaurize

./: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: bot-build.yml  go-test.yml  py-ci.yml  release.yml  test.yml
chart/: Chart.yaml  values.yaml
chart/templates/: redis.yaml  secret.yaml  thesaurize.yaml  volume.yaml
cmd/bot/: build.go  main.go
deployments/: loader-job.yaml  loader-scripts.yaml  namespace.yml  redis-config.yaml  redis.yaml  thesaurize.yaml  volume-default.yml  volume.yml
internal/database/: database.go  lexeme.go
internal/discord/: constants.go  discord.go  handlers.go
internal/loader/: loader.go  profanity.go
internal/sentence/: constants.go
internal/transformer/: builder.go  builder_test.go  constants.go  metadata.go  metadata_test.go  transformer.go
loader-tool/: .gitignore  pyproject.toml
loader-tool/loader_tool/: __main__.py  loader.py
loader-tool/tests/: test_loader_tool.py
pkg/discord/: constants.go  discord.go
pkg/sentence/: constants.go  sentence.go
pkg/thesaurus/: thesaurus.go
scripts/: loader.sh
tools/loader-tool/: .editorconfig  .gitignore  .python-version  README.md  pyproject.toml
tools/loader-tool/loader_tool/: __init__.py  loader.py
tools/loader-tool/tests/: test_loader_tool.py
tools/loader-tool/thesaurize_loader/: __init__.py  __main__.py  loader.py  protocols.py
