[tool.poetry]
name = "loader-tool"
version = "0.1.0"
description = ""
authors = ["MrFlynn <nick@pleatsikas.me>"]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
