[tool.poetry]
name = "thesaurize-loader"
version = "0.1.0"
description = "Loads encoded thesaurus into Redis datastore"
authors = ["Nick Pleatsikas <nick@pleatsikas.me>"]
readme = "README.md"
repository = "https://github.com/MrFlynn/thesaurize-bot"
classifiers = [
    "Topic :: Utilities",
    "Topic :: Database",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^1.3.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[tool.poetry.scripts]
loader = 'loader_tool.__main__:main'

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
