[tool.poetry]
name = "thesaurize-loader"
version = "0.2.4"
description = "Load OpenOffice thesaurus files into Redis"
authors = ["Nick Pleatsikas <nick@pleatsikas.me>"]
readme = "README.md"
repository = "https://github.com/MrFlynn/thesaurize/"
homepage = "https://github.com/MrFlynn/thesaurize/tree/master/tools/loader-tool"
classifiers = [
    "Topic :: Utilities",
    "Topic :: Database",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^1.3.1"
progress = "^1.5"
requests = "^2.24.0"
wordfilter = {git = "https://github.com/MrFlynn/wordfilter.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[tool.poetry.scripts]
thesaurize-loader = 'thesaurize_loader.__main__:main'

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
